Added more styling and structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,9 @@ h1 {
     font-size: 40px;
 }
 
+#target {
+    margin: 40px 10px 40px 0;
+    height: 200px;
+    width: 400px;
+    background-color: rgb(96, 177, 231);
+}
